# cppbot

./: CMakeLists.txt  README.md  main.cpp
build_desktop/: CMakeCache.txt  Makefile  SchoolBot  cmake_install.cmake  imgui.ini
build_web/: CMakeCache.txt  Makefile  SchoolBot.html  SchoolBot.js  SchoolBot.wasm  cmake_install.cmake
core/: main.cpp
